Hide fullscreen rotation jank on Android

In order to hide the jank that is shown during fullscreen rotations, evict the
frame and show a black screen while in fullscreen when the frame size doesn't
match the physical backing size. This change also clears the thumbnail cache of
the tab when entering fullscreen so that the thumbnail isn't shown when the
frame is evicted.

BUG=710243
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2810813004
Cr-Commit-Position: refs/heads/master@{#486080}

Former-commit-id: 88f9d604d77b922af3117d72a2433a67ccdf1a46