content/browser/renderer_host/render_widget_host_view_android.h
@@ -332,6 +332,8 @@ class CONTENT_EXPORT RenderWidgetHostViewAndroid
 
   void UpdateBackgroundColor(SkColor color);
 
+  void EvictFrameIfNecessary();
+
   // DevTools ScreenCast support for Android WebView.
   void SynchronousCopyContents(const gfx::Rect& src_subrect_in_pixel,
                                const gfx::Size& dst_size_in_pixel,
